# household-expenses

./: .gitignore  financial_summary_report.xlsx  pipeline_two_stages.py  pyproject.toml  requirements.txt
data/raw/: alice_SC_cc.csv  alice_WS_cc.csv  alice_WS_cheque.csv
models/: budgets.csv  categorize.py
src/: extractor.py  logic.py
