[project]
name = "expenses"
version = "0.1.0"
description = "Personal expenses tracking and analysis"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.1",
    "pandas==3.0.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.10.0",
    "pyarrow>=23.0.0",
    "python-dateutil>=2.9.0",
    "google-genai>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
